src/objects/Builder__c.object
<CustomObject>
    <description>MG_Builder</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Builder Records</relationshipLabel>
        <relationshipName>Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Builder_Logo_URL__c</fullName>
        <inlineHelpText>Provide the URL of the logo image to be used in Zonda. Paste shared dropbox link here.  Update dl=0 at the end of the link to raw=1.</inlineHelpText>
        <label>Builder Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Builder_Website__c</fullName>
        <label>Builder Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Builder_Name__c</fullName>
        <formula>Parent_Builder__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Builder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to link child builders to parent builders to allow project to be rolled up to parent builders in Zonda</description>
        <label>Parent Builder</label>
        <referenceTo>Builder__c</referenceTo>
        <relationshipLabel>Child Builders</relationshipLabel>
        <relationshipName>Child_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webscraped__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Builder has been Webscraped then then checkbox will be checked</inlineHelpText>
        <label>Webscraped</label>
        <type>Checkbox</type>
    </fields>
    <label>Builder</label>
    <nameField>
        <label>Builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>